Minor text edit

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                 <p>
                     Select different conditions from the dropdown to observe how neurological diseases affect the timing, 
                     symmetry, and consistency of the gait cycle. Note how healthy individuals maintain consistent timing 
-                    between steps, while those with neurological conditions often show irregularities beyond just having a 
-                    different stride timing.
+                    between steps, while those with neurological conditions often show irregularities in their stride timing indicating shorter steps.
                 </p>
             </div>
         </div>
